// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeMenu should highlight the active node 1`] = `
<TreeMenu
  activeKey="releasenotes/desktop-modeler/7"
  data={
    Object {
      "atd": Object {
        "index": 1,
        "key": "ats",
        "label": "ATS Guide",
      },
      "releasenotes": Object {
        "index": 0,
        "key": "releasenotes",
        "label": "Release Notes",
        "nodes": Object {
          "desktop-modeler": Object {
            "index": 0,
            "key": "releasenotes/desktop-modeler",
            "label": "Desktop Modeler",
            "nodes": Object {
              "7": Object {
                "index": 0,
                "key": "releasenotes/desktop-modeler/7",
                "label": "7",
                "nodes": Object {
                  "7.0": Object {
                    "index": 0,
                    "key": "releasenotes/desktop-modeler/7.0",
                    "label": "7.0",
                  },
                },
              },
            },
          },
        },
      },
    }
  }
  debounceTime={125}
  hasSearch={true}
  onClickItem={[Function]}
  openNodes={
    Array [
      "releasenotes",
      "releasenotes/desktop-modeler",
    ]
  }
  resetOpenNodesOnDataUpdate={false}
>
  <KeyDown
    down={[Function]}
    enter={[Function]}
    left={[Function]}
    right={[Function]}
    up={[Function]}
  >
    <div
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <input
        aria-label="Type and search"
        className="search"
        onChange={[Function]}
        placeholder="Type and search"
        type="search"
      />
      <ul
        className="tree-item-group"
      >
        <Component
          active={false}
          focused={false}
          hasNodes={true}
          index={0}
          isOpen={true}
          key="releasenotes"
          label="Release Notes"
          level={0}
          onClick={[Function]}
          openNodes={
            Array [
              "releasenotes",
              "releasenotes/desktop-modeler",
            ]
          }
          parent=""
          searchTerm=""
          toggleNode={[Function]}
        >
          <li
            aria-pressed={false}
            className="tree-item"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "paddingLeft": "0.75rem",
              }
            }
          >
            <div
              className="toggle-icon"
              onClick={[Function]}
            >
              <ToggleIcon
                closedIcon="+"
                on={true}
                openedIcon="-"
              >
                <div
                  aria-label="Toggle"
                  className="toggle-icon-symbol"
                  role="img"
                >
                  -
                </div>
              </ToggleIcon>
            </div>
            Release Notes
          </li>
        </Component>
        <Component
          active={false}
          focused={false}
          hasNodes={true}
          index={0}
          isOpen={true}
          key="releasenotes/desktop-modeler"
          label="Desktop Modeler"
          level={1}
          onClick={[Function]}
          openNodes={
            Array [
              "releasenotes",
              "releasenotes/desktop-modeler",
            ]
          }
          parent="releasenotes"
          searchTerm=""
          toggleNode={[Function]}
        >
          <li
            aria-pressed={false}
            className="tree-item"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "paddingLeft": "2.5rem",
              }
            }
          >
            <div
              className="toggle-icon"
              onClick={[Function]}
            >
              <ToggleIcon
                closedIcon="+"
                on={true}
                openedIcon="-"
              >
                <div
                  aria-label="Toggle"
                  className="toggle-icon-symbol"
                  role="img"
                >
                  -
                </div>
              </ToggleIcon>
            </div>
            Desktop Modeler
          </li>
        </Component>
        <Component
          active={true}
          focused={false}
          hasNodes={true}
          index={0}
          isOpen={false}
          key="releasenotes/desktop-modeler/7"
          label="7"
          level={2}
          onClick={[Function]}
          openNodes={
            Array [
              "releasenotes",
              "releasenotes/desktop-modeler",
            ]
          }
          parent="releasenotes/desktop-modeler"
          searchTerm=""
          toggleNode={[Function]}
        >
          <li
            aria-pressed={true}
            className="tree-item tree-item--active"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "paddingLeft": "4.25rem",
              }
            }
          >
            <div
              className="toggle-icon"
              onClick={[Function]}
            >
              <ToggleIcon
                closedIcon="+"
                on={false}
                openedIcon="-"
              >
                <div
                  aria-label="Toggle"
                  className="toggle-icon-symbol"
                  role="img"
                >
                  +
                </div>
              </ToggleIcon>
            </div>
            7
          </li>
        </Component>
        <Component
          active={false}
          focused={false}
          hasNodes={false}
          index={1}
          isOpen={false}
          key="atd"
          label="ATS Guide"
          level={0}
          onClick={[Function]}
          openNodes={
            Array [
              "releasenotes",
              "releasenotes/desktop-modeler",
            ]
          }
          parent=""
          searchTerm=""
        >
          <li
            aria-pressed={false}
            className="tree-item"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "paddingLeft": "2.75rem",
              }
            }
          >
            ATS Guide
          </li>
        </Component>
      </ul>
    </div>
  </KeyDown>
</TreeMenu>
`;

exports[`TreeMenu should open specified nodes 1`] = `
<TreeMenu
  data={
    Object {
      "atd": Object {
        "index": 1,
        "key": "ats",
        "label": "ATS Guide",
      },
      "releasenotes": Object {
        "index": 0,
        "key": "releasenotes",
        "label": "Release Notes",
        "nodes": Object {
          "desktop-modeler": Object {
            "index": 0,
            "key": "releasenotes/desktop-modeler",
            "label": "Desktop Modeler",
            "nodes": Object {
              "7": Object {
                "index": 0,
                "key": "releasenotes/desktop-modeler/7",
                "label": "7",
                "nodes": Object {
                  "7.0": Object {
                    "index": 0,
                    "key": "releasenotes/desktop-modeler/7.0",
                    "label": "7.0",
                  },
                },
              },
            },
          },
        },
      },
    }
  }
  debounceTime={125}
  hasSearch={true}
  onClickItem={[Function]}
  openNodes={
    Array [
      "releasenotes",
      "releasenotes/desktop-modeler",
    ]
  }
  resetOpenNodesOnDataUpdate={false}
>
  <KeyDown
    down={[Function]}
    enter={[Function]}
    left={[Function]}
    right={[Function]}
    up={[Function]}
  >
    <div
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <input
        aria-label="Type and search"
        className="search"
        onChange={[Function]}
        placeholder="Type and search"
        type="search"
      />
      <ul
        className="tree-item-group"
      >
        <Component
          active={false}
          focused={false}
          hasNodes={true}
          index={0}
          isOpen={true}
          key="releasenotes"
          label="Release Notes"
          level={0}
          onClick={[Function]}
          openNodes={
            Array [
              "releasenotes",
              "releasenotes/desktop-modeler",
            ]
          }
          parent=""
          searchTerm=""
          toggleNode={[Function]}
        >
          <li
            aria-pressed={false}
            className="tree-item"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "paddingLeft": "0.75rem",
              }
            }
          >
            <div
              className="toggle-icon"
              onClick={[Function]}
            >
              <ToggleIcon
                closedIcon="+"
                on={true}
                openedIcon="-"
              >
                <div
                  aria-label="Toggle"
                  className="toggle-icon-symbol"
                  role="img"
                >
                  -
                </div>
              </ToggleIcon>
            </div>
            Release Notes
          </li>
        </Component>
        <Component
          active={false}
          focused={false}
          hasNodes={true}
          index={0}
          isOpen={true}
          key="releasenotes/desktop-modeler"
          label="Desktop Modeler"
          level={1}
          onClick={[Function]}
          openNodes={
            Array [
              "releasenotes",
              "releasenotes/desktop-modeler",
            ]
          }
          parent="releasenotes"
          searchTerm=""
          toggleNode={[Function]}
        >
          <li
            aria-pressed={false}
            className="tree-item"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "paddingLeft": "2.5rem",
              }
            }
          >
            <div
              className="toggle-icon"
              onClick={[Function]}
            >
              <ToggleIcon
                closedIcon="+"
                on={true}
                openedIcon="-"
              >
                <div
                  aria-label="Toggle"
                  className="toggle-icon-symbol"
                  role="img"
                >
                  -
                </div>
              </ToggleIcon>
            </div>
            Desktop Modeler
          </li>
        </Component>
        <Component
          active={false}
          focused={false}
          hasNodes={true}
          index={0}
          isOpen={false}
          key="releasenotes/desktop-modeler/7"
          label="7"
          level={2}
          onClick={[Function]}
          openNodes={
            Array [
              "releasenotes",
              "releasenotes/desktop-modeler",
            ]
          }
          parent="releasenotes/desktop-modeler"
          searchTerm=""
          toggleNode={[Function]}
        >
          <li
            aria-pressed={false}
            className="tree-item"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "paddingLeft": "4.25rem",
              }
            }
          >
            <div
              className="toggle-icon"
              onClick={[Function]}
            >
              <ToggleIcon
                closedIcon="+"
                on={false}
                openedIcon="-"
              >
                <div
                  aria-label="Toggle"
                  className="toggle-icon-symbol"
                  role="img"
                >
                  +
                </div>
              </ToggleIcon>
            </div>
            7
          </li>
        </Component>
        <Component
          active={false}
          focused={false}
          hasNodes={false}
          index={1}
          isOpen={false}
          key="atd"
          label="ATS Guide"
          level={0}
          onClick={[Function]}
          openNodes={
            Array [
              "releasenotes",
              "releasenotes/desktop-modeler",
            ]
          }
          parent=""
          searchTerm=""
        >
          <li
            aria-pressed={false}
            className="tree-item"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "paddingLeft": "2.75rem",
              }
            }
          >
            ATS Guide
          </li>
        </Component>
      </ul>
    </div>
  </KeyDown>
</TreeMenu>
`;

exports[`TreeMenu should render the level-1 nodes by default 1`] = `
<TreeMenu
  data={
    Object {
      "atd": Object {
        "index": 1,
        "key": "ats",
        "label": "ATS Guide",
      },
      "releasenotes": Object {
        "index": 0,
        "key": "releasenotes",
        "label": "Release Notes",
        "nodes": Object {
          "desktop-modeler": Object {
            "index": 0,
            "key": "releasenotes/desktop-modeler",
            "label": "Desktop Modeler",
            "nodes": Object {
              "7": Object {
                "index": 0,
                "key": "releasenotes/desktop-modeler/7",
                "label": "7",
                "nodes": Object {
                  "7.0": Object {
                    "index": 0,
                    "key": "releasenotes/desktop-modeler/7.0",
                    "label": "7.0",
                  },
                },
              },
            },
          },
        },
      },
    }
  }
  debounceTime={125}
  hasSearch={true}
  onClickItem={[Function]}
  resetOpenNodesOnDataUpdate={false}
>
  <KeyDown
    down={[Function]}
    enter={[Function]}
    left={[Function]}
    right={[Function]}
    up={[Function]}
  >
    <div
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <input
        aria-label="Type and search"
        className="search"
        onChange={[Function]}
        placeholder="Type and search"
        type="search"
      />
      <ul
        className="tree-item-group"
      >
        <Component
          active={false}
          focused={false}
          hasNodes={true}
          index={0}
          isOpen={false}
          key="releasenotes"
          label="Release Notes"
          level={0}
          onClick={[Function]}
          openNodes={Array []}
          parent=""
          searchTerm=""
          toggleNode={[Function]}
        >
          <li
            aria-pressed={false}
            className="tree-item"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "paddingLeft": "0.75rem",
              }
            }
          >
            <div
              className="toggle-icon"
              onClick={[Function]}
            >
              <ToggleIcon
                closedIcon="+"
                on={false}
                openedIcon="-"
              >
                <div
                  aria-label="Toggle"
                  className="toggle-icon-symbol"
                  role="img"
                >
                  +
                </div>
              </ToggleIcon>
            </div>
            Release Notes
          </li>
        </Component>
        <Component
          active={false}
          focused={false}
          hasNodes={false}
          index={1}
          isOpen={false}
          key="atd"
          label="ATS Guide"
          level={0}
          onClick={[Function]}
          openNodes={Array []}
          parent=""
          searchTerm=""
        >
          <li
            aria-pressed={false}
            className="tree-item"
            onClick={[Function]}
            role="button"
            style={
              Object {
                "paddingLeft": "2.75rem",
              }
            }
          >
            ATS Guide
          </li>
        </Component>
      </ul>
    </div>
  </KeyDown>
</TreeMenu>
`;
